--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <script crossorigin="anonymous" defer="defer" type="application/javascript" integrity="sha512-wBbWqjziMAlLg4M9hhxUY56cTT1oLJ2wPLRyFbU39P/xPeKF3tbxtFC1WHmMRk6ZYJBo4II7uXMow4Edw6s/aA==" src="./ruqizhang.github.io_index.html at master · ruqizhang_ruqizhang.github.io · GitHub_files/code-menu-c016d6aa3ce2.js.下载"></script>
   
 
-  <title>ruqizhang.github.io/index.html at master · ruqizhang/ruqizhang.github.io · GitHub</title>
+  <title>GitHub</title>
 
 
 
