--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Ruqi Zhang</title>
+	<title>Yongxian Fan</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -52,12 +52,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<input type="checkbox" id="drop">
 							<ul class="menu">
 								<li class="mr-lg-4 mr-3 active"><a href="index.html">Home</a></li>
-								<li class="mr-lg-4 mr-3"><a href="#news" class="scroll">News</a></li>
+								<!-- <li class="mr-lg-4 mr-3"><a href="#news" class="scroll">News</a></li>
 								<li class="mr-lg-4 mr-3"><a href="#interests" class="scroll">Research Interests</a></li>
 								<li class="mr-lg-4 mr-3"><a href="#publications" class="scroll">Publications</a></li>
 								<li class="mr-lg-4 mr-3"><a href="#talks" class="scroll">Talks</a></li>
 								<li class="mr-lg-4 mr-3"><a href="pdf/cv.pdf" class="scroll">CV</a></li>
-								<li><a href="#contact" class="scroll">Contact</a></li>					
+								<li><a href="#contact" class="scroll">Contact</a></li>					 -->
 							</ul>
 						</nav>
 			</div>
