--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<input type="checkbox" id="drop">
 							<ul class="menu">
 								<li class="mr-lg-4 mr-3 active"><a href="index.html">Home</a></li>
-								<!-- <li class="mr-lg-4 mr-3"><a href="#news" class="scroll">News</a></li>
+								<li class="mr-lg-4 mr-3"><a href="#news" class="scroll">News</a></li>
 								<li class="mr-lg-4 mr-3"><a href="#interests" class="scroll">Research Interests</a></li>
 								<li class="mr-lg-4 mr-3"><a href="#publications" class="scroll">Publications</a></li>
 								<li class="mr-lg-4 mr-3"><a href="#talks" class="scroll">Talks</a></li>
 								<li class="mr-lg-4 mr-3"><a href="pdf/cv.pdf" class="scroll">CV</a></li>
-								<li><a href="#contact" class="scroll">Contact</a></li>					 -->
+								<li><a href="#contact" class="scroll">Contact</a></li>					
 							</ul>
 						</nav>
 			</div>
@@ -71,7 +71,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="row middle-grids">
                     <div class="col-lg-4 advantage-grid-info1">
                         <div class="advantage_left1 text-center">
-							<img src="images/portrait.JPG" class="img-fluid" alt="">
+							<img src="images/avator.jpg" class="img-fluid" alt="">
 							<p class="mt-4"> <a href="https://scholar.google.com/citations?user=4ojpmc8AAAAJ&hl=en"><i class="ai ai-google-scholar" aria-hidden="true"style="font-size: 3.5em"></i></a>
 								&nbsp&nbsp&nbsp<a href="https://github.com/ruqizhang"><i class="fa fa-github"style="font-size: 3.5em"></i></a>
 								&nbsp&nbsp&nbsp<a href="pdf/cv.pdf"><i class="ai ai-cv"style="font-size: 3.5em"></i></a>
