--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div> 
 					 <div class="col-lg-8 advantage-grid-info">
                         <div class="advantage_left">
-                             <h1 class="heading text-capitalize mb-sm-5 mb-4">Hi. I'm <span>Ruqi Zhang.</span></h1>
+                             <h1 class="heading text-capitalize mb-sm-5 mb-4">Hi. I'm <span>Yongxian Fan.</span></h1>
 							<p style="color:#212529",class="mt-4">I am currently a postdoctoral fellow at <a href="https://ml.utexas.edu/ifml">Institute for Foundations of Machine Learning</a>. I just completed my PhD in <a href="https://stat.cornell.edu/">Statistics at Cornell University</a>, where I was advised by <a href="http://www.cs.cornell.edu/~cdesa/">Chris De Sa</a>. 
 								Before joining Cornell, I recieved a B.S. in Mathematics from <a href="https://www.ruc.edu.cn/en">Renmin University of China</a>.
 							</p>
@@ -236,7 +236,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<h3 class="heading text-capitalize text-white text-center"> Contact </h3>
 			<div advantage_left>
-					<h5 class="heading text-white text-center">Email: rz297@cornell.edu</h5>
+					<h5 class="heading text-white text-center">Email: yx_f@163.com OR yongxian.fan@gmail.com</h5>
 			   </div>
 			
 		</div>
