change some link

--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="col-lg-4 advantage-grid-info1">
                         <div class="advantage_left1 text-center">
 							<img src="images/avator.jpg" class="img-fluid" alt="">
-							<p class="mt-4"> <a href="https://scholar.google.com/citations?user=4ojpmc8AAAAJ&hl=en"><i class="ai ai-google-scholar" aria-hidden="true"style="font-size: 3.5em"></i></a>
-								&nbsp&nbsp&nbsp<a href="https://github.com/ruqizhang"><i class="fa fa-github"style="font-size: 3.5em"></i></a>
-								&nbsp&nbsp&nbsp<a href="pdf/cv.pdf"><i class="ai ai-cv"style="font-size: 3.5em"></i></a>
+							<p class="mt-4"> <a href="https://www.researchgate.net/profile/Yongxian_Fan"><i class="ai ai-google-scholar" aria-hidden="true"style="font-size: 3.5em"></i></a>
+								&nbsp&nbsp&nbsp<a href="https://github.com/dasegroup"><i class="fa fa-github"style="font-size: 3.5em"></i></a>
 							</p>
                         </div>
                     </div> 
