--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div align="left">
 		<!-- <p style="color:#212529",class="mt-3"> -->
 			<ul>
-				<li style="font-size:1.5em;font-weight: 90">[05/15/2022] 2 papers were accepted by ICML 2022!</li>
-				<li style="font-size:1.5em;font-weight: 90">[11/04/2021] Gave a talk at <a href="https://simons.berkeley.edu/">Simons Institute</a> on Scalable and Reliable Inference for Probabilistic Modeling. Check out the <a href="https://www.youtube.com/watch?v=9Xv-tiY9qi8&t=959s">video</a>!</li>
-				<li style="font-size:1.5em;font-weight: 90">[10/18/2021] Will be co-organizing <a href="http://approximateinference.org/">Symposium on
+				<li style="font-size:1.5em;font-weight: 90">[05/2022] 2 papers were accepted by ICML 2022!</li>
+				<li style="font-size:1.5em;font-weight: 90">[11/2021] Gave a talk at <a href="https://simons.berkeley.edu/">Simons Institute</a> on Scalable and Reliable Inference for Probabilistic Modeling. Check out the <a href="https://www.youtube.com/watch?v=9Xv-tiY9qi8&t=959s">video</a>!</li>
+				<li style="font-size:1.5em;font-weight: 90">[10/2021] Will be co-organizing <a href="http://approximateinference.org/">Symposium on
 					Advances in Approximate Bayesian Inference</a>.</li>
 			</ul> 
 		<!-- </p> -->
